--- a/Webinterface/soft-ui-dashboard-main/pages/dashboard.html
+++ b/Webinterface/soft-ui-dashboard-main/pages/dashboard.html
@@ -459,7 +459,7 @@
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Wolle</p>
                     <h5 class="font-weight-bolder mb-0">
                       30C
-                      <span class="text-success text-sm font-weight-bolder">Bereit</span>
+                      <span class="text-success text-sm font-weight-bolder">1 min</span>
                     </h5>
                   </div>
                 </div>
